--- a/content/hello-world.mdx
+++ b/content/hello-world.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Hello World"
+title: "Hello Worldvcnvn"
 publishedAt: "2024-06-18"
 summary: "My first post on my new blog."
 ---
@@ -7,5 +7,5 @@ summary: "My first post on my new blog."
 Hi there!
 
 ```jsx
-console.log("Hello World");
+console.log("Hello Worldvbcncv");
 ```
